Changes name to full_name, updates migration issues

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,13 +6,13 @@
 </p>
 
 <div>
-  <%= @event.creator.name %>
+  <%= @event.creator.full_name %>
 </div>
 
 <div>
   <% @event.users.each do |user| %>
     <p>
-      <%= user.name %>
+      <%= user.full_name %>
     </p>
   <% end %>
 </div>
