--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @user.name %>
+  <%= @user.full_name %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
