--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -6,7 +6,7 @@
 
 <br />
 
-<%= link_to "New Resume", new_resume_path, class: "btn btn-primary" %>
+<%= link_to "New Picture", new_picture_path, class: "btn btn-primary" %>
 <br />
 <br />
 
@@ -20,12 +20,12 @@
    </thead>
 
    <tbody>
-      <% @resumes.each do |resume| %>
+      <% @pictures.each do |picture| %>
 
          <tr>
-            <td><%= resume.name %></td>
-            <td><%= link_to "Download Resume", resume.attachment_url %></td>
-            <td><%= button_to "Delete",  resume, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you wish to delete #{resume.name}?" %></td>
+            <td><%= picture.name %></td>
+            <td><%= link_to "Download Picture", picture.attachment_url %></td>
+            <td><%= button_to "Delete",  picture, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you wish to delete #{picture.name}?" %></td>
          </tr>
 
       <% end %>
