--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,8 +1,8 @@
-<% if !@resume.errors.empty? %>
+<% if !@picture.errors.empty? %>
    <div class = "alert alert-error">
 
       <ul>
-         <% @resume.errors.full_messages.each do |msg| %>
+         <% @picture.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
          <% end %>
       </ul>
@@ -11,7 +11,7 @@
 <% end %>
 
 <div class = "well">
-   <%= form_for @resume, html: { multipart: true } do |f| %>
+   <%= form_for @picture, html: { multipart: true } do |f| %>
       <%= f.label :name %>
       <%= f.text_field :name %>
       <%= f.label :attachment %>
