--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -50,7 +50,7 @@
 
       
     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab" aria-expanded="false">
-      <% @friends_events.each do |friends_event| %>
+      <% @all_friends_events.each do |friends_event| %>
 
       <div class="container">
         <div class="row">
