--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -16,5 +16,5 @@
 </div>
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
+<%= link_to 'Back', events_path %> |
 <%= link_to 'Join', user_events_path(:user_event => {event_id: @event.id, user_id: current_user.id}), method: :post %>
