Adds seed file. Tidies up events controller, updates index view.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -50,7 +50,7 @@
 
       
     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab" aria-expanded="false">
-      <% @all_friends_events.each do |friends_event| %>
+      <% @friend_events.each do |friend_event| %>
 
       <div class="container">
         <div class="row">
@@ -59,10 +59,10 @@
             <div class="container test-border">
               <div class="row evt-feed-img test-border"> 
                   Event IMG ERB Here
-                  <p><%= friends_event.title %></p>
-                  <p><%= friends_event.date %></p>
-                  <p><%= friends_event.location %></p>
-                  <p><%= friends_event.creator.full_name %></p>
+                  <p><%= friend_event.title %></p>
+                  <p><%= friend_event.date %></p>
+                  <p><%= friend_event.location %></p>
+                  <p><%= friend_event.creator.full_name %></p>
               </div>
             </div>
 
