--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -14,7 +14,7 @@
 
   <div class="tab-content" id="myTabContent">
     <div role="tabpanel" class="tab-pane fade active show" id="home" aria-labelledby="home-tab" aria-expanded="true">
-      <% @all_attending_events.sort_by(&:date).reverse.each do |all_attending_event| %>
+      <% @all_attending_events.sort_by(&:date).each do |all_attending_event| %>
         <div class="container">
           <div class="row">
             <div class="col-12 color-row" >
@@ -49,7 +49,7 @@
 
     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab" aria-expanded="false">
 
-      <% @friend_events.sort_by(&:date).reverse.each do |friend_event| %>
+      <% @friend_events.sort_by(&:date).each do |friend_event| %>
       <div class="container">
         <div class="row">
           <div class="col-12 color-row" >
