--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -20,24 +20,15 @@
             <div class="col-12 color-row" >
 
               <div class="container test-border">
-                <div class="row evt-feed-img test-border">
-                    Event IMG ERB Here
-                    <p><%= all_attending_event.title %></p>
-                    <p><%= time_formatter(all_attending_event.date) %></p>
-                    <p><%= all_attending_event.location %></p>
-                    <p><%= all_attending_event.creator.full_name %></p>
-                </div>
-              </div>
-
-              <div class="container test-border">
-                <div class="row test-border">
-                    <div class="col-6 test-border">
-                      Message
-                    </div>
-                    <div class="col-6 test-border">
-                      Join
-                    </div>
+                <%= link_to event_path(all_attending_event.id) do %>
+                  <div class="row evt-feed-img test-border">
+                      Event IMG
+                      <p><%= all_attending_event.title %></p>
+                      <p><%= time_formatter(all_attending_event.date) %></p>
+                      <p><%= all_attending_event.location %></p>
+                      <p><%= all_attending_event.creator.full_name %></p>
                   </div>
+                <% end %>
               </div>
 
             </div>
@@ -55,25 +46,23 @@
           <div class="col-12 color-row" >
 
             <div class="container test-border">
-              <div class="row evt-feed-img test-border">
-                  Event IMG ERB Here
-
-                  <p><%= friend_event.title %></p>
-                  <p><%= time_formatter(friend_event.date) %></p>
-                  <p><%= friend_event.location %></p>
-                  <p><%= friend_event.creator.full_name %></p>
-              </div>
+              <%= link_to event_path(friend_event.id) do %>
+                <div class="row evt-feed-img test-border">
+                    Event IMG
+                    <p><%= friend_event.title %></p>
+                    <p><%= time_formatter(friend_event.date) %></p>
+                    <p><%= friend_event.location %></p>
+                    <p><%= friend_event.creator.full_name %></p>
+                </div>
+               <% end %>
             </div>
 
             <div class="container test-border">
               <div class="row test-border">
-                  <div class="col-6 test-border">
-                    Message
-                  </div>
-                  <div class="col-6 test-border">
-                    Join
-                  </div>
+                <div class="col-12 test-border">
+                    <%= link_to 'Join', user_events_path(:user_event => {event_id: "#{friend_event.id}", user_id: current_user.id}), method: :post %>
                 </div>
+              </div>
             </div>
 
           </div>
@@ -92,24 +81,15 @@
           <div class="col-12 color-row" >
 
             <div class="container test-border">
-              <div class="row evt-feed-img test-border">
-                  Event IMG ERB Here
-                  <p><%= past_event.title %></p>
-                  <p><%= time_formatter(past_event.date) %></p>
-                  <p><%= past_event.location %></p>
-                  <p><%= past_event.creator.full_name %></p>
-              </div>
-            </div>
-
-            <div class="container test-border">
-              <div class="row test-border">
-                  <div class="col-6 test-border">
-                    Message
-                  </div>
-                  <div class="col-6 test-border">
-                    Join
-                  </div>
+              <%= link_to event_path(past_event.id) do %>
+                <div class="row evt-feed-img test-border">
+                    Event IMG
+                    <p><%= past_event.title %></p>
+                    <p><%= time_formatter(past_event.date) %></p>
+                    <p><%= past_event.location %></p>
+                    <p><%= past_event.creator.full_name %></p>
                 </div>
+              <% end %>
             </div>
 
           </div>
