backend updates to event feed. Join button is clickable, and event is clickable

--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -44,11 +44,12 @@ section {
   margin-top: 20px;
 }
 
-.test-border {
-  border: 1px solid black;
+.evt-feed-img {
+  height: 189px;
+  background-color: red;
 }
 
-.evt-feed-img {
+.friend-evt-feed-img {
   height: 157px;
   background-color: red;
 }
