--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -6,7 +6,7 @@
 
 <br />
 
-<%= link_to "New Picture", new_picture_path, class: "btn btn-primary" %>
+<%= link_to "New Picture", pictures_new_path, class: "btn btn-primary" %>
 <br />
 <br />
 
