--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Image:</strong>
-  <%= @photo.image %>
+  <%= @photo.attachment %>
 </p>
 
 <p>
   <strong>Title:</strong>
-  <%= @photo.title %>
+  <%= @photo.name %>
 </p>
 
 <p>
