--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,31 +1,34 @@
-<p id="notice"><%= notice %></p>
+<% if !flash[:notice].blank? %>
+   <div class = "alert alert-info">
+      <%= flash[:notice] %>
+   </div>
+<% end %>
 
-<h1>Photos</h1>
+<br />
 
-<table>
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Title</th>
-      <th>Event</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= link_to "New Picture", photos_new_path, class: "btn btn-primary" %>
+<br />
+<br />
 
-  <tbody>
-    <% @photos.each do |photo| %>
+<table class = "table table-bordered table-striped">
+   <thead>.
       <tr>
-        <td><%= photo.image %></td>
-        <td><%= photo.title %></td>
-        <td><%= photo.event %></td>
-        <td><%= link_to 'Show', photo %></td>
-        <td><%= link_to 'Edit', edit_photo_path(photo) %></td>
-        <td><%= link_to 'Destroy', photo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+         <th>Name</th>
+         <th>Download Link</th>
+         <th> </th>
       </tr>
-    <% end %>
-  </tbody>
+   </thead>
+
+   <tbody>
+      <% @photos.each do |photo| %>
+
+         <tr>
+            <td><%= photo.name %></td>
+            <td><%= button_to "Delete",  photo, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you wish to delete #{photo.name}?" %></td>
+            <td><%= image_tag photo.attachment_url %></td>
+         </tr>
+
+      <% end %>
+   </tbody>
+
 </table>
-
-<br>
-
-<%= link_to 'New Photo', new_photo_path %>
