--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -49,6 +49,10 @@ section {
   background-color: red;
 }
 
+.evt-img {
+  height: 189px;
+}
+
 .friend-evt-feed-img {
   height: 157px;
   background-color: red;
