--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,16 @@
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-12 evt-img">
+        <!-- <%= image_tag @photo.attachment_url(@photo.id) %> -->
+    </div>
+      <div class="col-12">
+        <%= link_to "New Picture", photos_new_path, class: "btn btn-primary" %>
+    </div>
+  </div>
+</div>
+
 <p>
   <strong>Title:</strong>
   <%= @event.title %>
