--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,21 +1,5 @@
-<% if !@photo.errors.empty? %>
-   <div class = "alert alert-error">
+<h1>New Photo</h1>
 
-      <ul>
-         <% @photo.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-         <% end %>
-      </ul>
+<%= render 'form', photo: @photo %>
 
-   </div>
-<% end %>
-
-<div class = "well">
-   <%= form_for @photo, html: { multipart: true } do |f| %>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-      <%= f.label :attachment %>
-      <%= f.file_field :attachment %>
-      <%= f.submit "Save", class: "btn btn-primary" %>
-   <% end %>
-</div>
+<%= link_to 'Back', event_photos_path %>
