--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,10 +3,14 @@
 <div class="container">
   <div class="row">
     <div class="col-12 evt-img">
-        <!-- <%= image_tag @photo.attachment_url(@photo.id) %> -->
+      <% if @event.photos.exists? %>
+        <%= image_tag @event.photos.first.attachment_url %>
+      <% else %>
+        Placeholder pic
+      <% end %>
     </div>
       <div class="col-12">
-        <%= link_to "New Picture", photos_new_path, class: "btn btn-primary" %>
+        <%= link_to "New Picture", new_event_photo_path(@event.id), class: "btn btn-primary" %>
     </div>
   </div>
 </div>
