--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -4,7 +4,7 @@
 
 // make all images responsive by default
 img {
-  @extend .img-responsive;
+  @extend .img-fluid;
   margin: 0 auto;
 }
 // override for the 'Home' navigation link
