adds divs and starting html to events show page

--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -12,6 +12,31 @@ img {
   font-size: inherit;
   }
 
+.navbar {
+align-items: center;
+align-content: space-between;
+}
+
+.bar {
+  display: flex;
+  flex-direction: row;
+}
+
+.navbar-right {
+  align-items: center;
+  flex-direction: row;
+  display: flex;
+  padding-left: 800px;
+  list-style: none;
+}
+
+// Font Awesome Icons
+.fa {
+  color: white;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
 // THESE ARE EXAMPLES YOU CAN MODIFY
 // create your own classes
 // to make views framework-neutral
@@ -44,13 +69,10 @@ section {
   margin-top: 20px;
 }
 
+// For images in the event feed page
 .evt-feed-img {
   height: 189px;
   background-color: red;
-}
-
-.evt-img {
-  height: 189px;
 }
 
 .friend-evt-feed-img {
@@ -58,9 +80,19 @@ section {
   background-color: red;
 }
 
+// Default style for row - #TODO - REMOVE
 .color-row {
   background-color: yellow;
   height: 189px;
   width: 100%;
   margin-bottom: 10px;
+}
+
+// For images in the event show page
+.evt-img {
+  height: 189px;
+}
+
+#no-image {
+  color: black;
 }
