--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,22 +1,45 @@
 <%# navigation styled for Bootstrap 4.0 %>
-<div class="container">
-  <nav class="navbar navbar-dark bg-inverse">
-    <ul class="nav navbar-nav clearfix">
-      <li class="nav-item">
+<div class="navbar navbar-dark bg-inverse navbar-fixed-top" >
+  <div class="container bar">
+
+      <% if current_user %>
+        <%= link_to events_path do %>
+          <i class="fa fa-users fa-5x" aria-hidden="true"></i>
+        <% end %>
+      <% else %>
+        <%= link_to root_path do %>
+          <i class="fa fa-users fa-5x" aria-hidden="true"></i>
+        <% end %>
+      <% end %>
+
+    <ul class="navbar-right">
+        <%= render 'layouts/navigation_links' %>
+    </ul>
+
+      <!-- <div class="nav navbar-nav navbar-right"> -->
+
+      <!-- </div> -->
+    <!-- </div> -->
+
+
+  <!-- <nav class="navbar navbar-dark bg-inverse"> -->
+    <!-- <ul class="nav navbar-nav clearfix">
+      <li class="nav-item"> -->
         <!-- <button class="navbar-toggler hidden-sm-up nav-link" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
           &#9776;
         </button> -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
           &#9776;
         </button>
       </li>
-    </ul>
-    <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">hhhhh
+    </ul> -->
+    <!-- <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">hhhhh
       <%= link_to "Rails bootstrap", root_path, class: 'navbar-brand' %>
-      <ul class="nav navbar-nav">
-        <%= render 'layouts/navigation_links' %>
+      <ul class="nav navbar-nav"> -->
 
-      </ul>
-    </div>
-  </nav>
+
+      <!-- </ul> -->
+    <!-- </div> -->
+  <!-- </nav> -->
+  </div>
 </div>
