Initial FrontEnd structure

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -5,3 +5,4 @@
 <% else %>
   <a class="btn btn-lg btn-primary" href="/auth/facebook" role="button">Log In With Facebook</a>
 <% end %>
+<%= link_to 'Help', static_pages_help_path, class: 'navbar-brand' %>
