--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -59,3 +59,10 @@ section {
   width: 100%;
   margin-bottom: 10px;
 }
+
+main {
+  @extend .container;
+  background-color: #eee;
+  padding: 0;
+  width: 100%;
+}
