--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,7 @@
   </head>
 
   <body>
-
-
-
-
-       <%= yield %>
-
-
-
+    <%= render 'layouts/navigation' %>
+    <%= yield %>
   </body>
 </html>
