--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,14 +1,40 @@
-<%# navigation styled for Bootstrap 4.0 %>
-<div class="navbar navbar-dark bg-inverse navbar-fixed-top" >
-  <div class="container bar">
+<style>
+
+#header {
+    top: 0px;
+}
+
+/*#footer{
+  bottom: 0px;
+}*/
+/*Footer can be included in the future*/
+#header {
+      position:fixed;
+      height: 50px;
+      display:block;
+      width: 100%;
+      background: #333;
+      z-index:9;
+      text-align:center;
+      color: #f2f2f2;
+      padding: 20px 0 0 0;
+  }
+
+
+</style>
+
+
+<div id="header">
+<!-- <div class="navbar navbar-dark bg-inverse navbar-fixed-top" > -->
+  <!-- <div class="container bar"> -->
 
       <% if current_user %>
         <%= link_to events_path do %>
-          <i class="fa fa-users fa-5x" aria-hidden="true"></i>
+          <%= image_tag "groop-white.png", :class => "logo_img" %>
         <% end %>
       <% else %>
         <%= link_to root_path do %>
-          <i class="fa fa-users fa-5x" aria-hidden="true"></i>
+          <%= image_tag "groop-white.png", :class => "logo_img" %>
         <% end %>
       <% end %>
 
@@ -16,30 +42,5 @@
         <%= render 'layouts/navigation_links' %>
     </ul>
 
-      <!-- <div class="nav navbar-nav navbar-right"> -->
-
-      <!-- </div> -->
-    <!-- </div> -->
-
-
-  <!-- <nav class="navbar navbar-dark bg-inverse"> -->
-    <!-- <ul class="nav navbar-nav clearfix">
-      <li class="nav-item"> -->
-        <!-- <button class="navbar-toggler hidden-sm-up nav-link" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
-          &#9776;
-        </button> -->
-        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
-          &#9776;
-        </button>
-      </li>
-    </ul> -->
-    <!-- <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">hhhhh
-      <%= link_to "Rails bootstrap", root_path, class: 'navbar-brand' %>
-      <ul class="nav navbar-nav"> -->
-
-
-      <!-- </ul> -->
-    <!-- </div> -->
-  <!-- </nav> -->
-  </div>
+  <!-- </div> -->
 </div>
