--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -128,7 +128,7 @@ welcome to Groop
 	</div>
 </div>
 
-	<div class="section fp-auto-height" id="sectio">
+	<div class="section fp-auto-height" id="section1">
 			<div class="slide" id="slide1">
 				<div class="myContent">
 						<h1>Section 2</h1>
