--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -15,6 +15,9 @@ img {
 .navbar {
 align-items: center;
 align-content: space-between;
+z-index: 25;
+padding-bottom: 0px;
+// background: rgba(34, 34, 34, 0.5);
 }
 
 .bar {
@@ -103,3 +106,11 @@ main {
 #no-image {
   color: black;
 }
+
+.logo_img {
+  height: 30px;
+  object-fit: cover;
+}
+
+
+  
