--- a/app/assets/stylesheets/examples.css
+++ b/app/assets/stylesheets/examples.css
@@ -1,7 +1,7 @@
-@CHARSET "ISO-8859-1";
+/*@CHARSET "ISO-8859-1";*/
 /* Reset CSS
  * --------------------------------------- */
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,
+/*body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,
 form,fieldset,input,textarea,p,blockquote,th,td {
     padding: 0;
     margin: 0;
@@ -47,7 +47,7 @@ abbr,acronym { border: 0;
 
 /* Custom CSS
  * --------------------------------------- */
-body{
+/*body{
 	font-family: arial,helvetica;
 	color: #333;
 	color: rgba(0,0,0,0.5);
@@ -201,8 +201,8 @@ p{
 	right: 0;
 	width:638px;
 	text-align:left;
-}
-#examplesList ul{
+}*/
+/*#examplesList ul{
 	padding:0;
 }
 #examplesList ul li{
@@ -219,8 +219,8 @@ p{
 #examplesList .column{
 	float: left;
 	margin: 0 20px 0 0;
-}
-#examplesList h3{
+}*/
+/*#examplesList h3{
 	color: #f2f2f2;
 	font-size: 1.2em;
 	margin: 0 0 15px 0;
@@ -229,16 +229,15 @@ p{
 	-moz-box-shadow: 0 1px 0 rgba(255,255,255,0.1);
 	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
 	padding: 0 0 5px 0;
-}
+}*/
 
 
 
-/* Demos Menu
- * --------------------------------------- */
- #demosMenu{
+ /*Demos Menu*/
+ /* --------------------------------------- */
+ /*#demosMenu{
 	position:fixed;
 	bottom: 10px;
 	right:10px;
 	z-index: 999;
- }
-
+ }*/
