--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -1,4 +1,3 @@
-// import the CSS framework
 // Do not use *= require in Sass or your other stylesheets will not be able to access the Bootstrap mixins and variables.
 @import "bootstrap";
 
@@ -7,30 +6,50 @@ img {
   @extend .img-fluid;
   margin: 0 auto;
 }
+
+body {
+//   background: url(back.jpg);
+//   background-size: contain;
+    overflow-y:hidden;
+}
+
+//Navigation Links
+#header {
+      position:fixed;
+      height: 70px;
+      display:block;
+      width: 100%;
+      background: #333;
+      z-index:9;
+      text-align: center;
+      color: #f2f2f2;
+      padding: 20px 0 0 0;
+      top: 0px;
+      background: rgba(34, 34, 34, 0.95);
+  }
+
+  .logo_img {
+    height: 35px;
+    object-fit: cover;
+  }
+
+  .bar {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .navbar-right {
+    align-items: center;
+    flex-direction: row;
+    display: flex;
+    padding-left: 800px;
+    list-style: none;
+  }
+
+
 // override for the 'Home' navigation link
 .navbar-brand {
   font-size: inherit;
-  }
-
-.navbar {
-align-items: center;
-align-content: space-between;
-z-index: 25;
-padding-bottom: 0px;
-// background: rgba(34, 34, 34, 0.5);
-}
-
-.bar {
-  display: flex;
-  flex-direction: row;
-}
-
-.navbar-right {
-  align-items: center;
-  flex-direction: row;
-  display: flex;
-  padding-left: 800px;
-  list-style: none;
 }
 
 // Font Awesome Icons
@@ -40,7 +59,6 @@ padding-bottom: 0px;
   padding-right: 8px;
 }
 
-// THESE ARE EXAMPLES YOU CAN MODIFY
 // create your own classes
 // to make views framework-neutral
 .column {
@@ -72,12 +90,13 @@ section {
   margin-top: 20px;
 }
 
-// For images in the event feed page
+// For images in the event feed page #TODO - Remove
 .evt-feed-img {
   height: 189px;
   background-color: red;
 }
 
+ // #TODO - Remove
 .friend-evt-feed-img {
   height: 157px;
   background-color: red;
@@ -107,10 +126,7 @@ main {
   color: black;
 }
 
-.logo_img {
-  height: 30px;
-  object-fit: cover;
-}
-
-
-  
+/*Footer can be included in the future*/
+/*#footer{
+  bottom: 0px;
+}*/
